# Product_classification

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: Inference_time.ipynb  Time measurements.ipynb
product_classificator/: __init__.py  classificator.py  id_to_label.pkl  predictor.py
product_classificator/classification_heads/: __init__.py  mlp_age_restrictions.pt  mlp_fragility.pt  mlp_season.pt  mlp_sex.pt  pca_all.pkl
product_classificator/heads/: category.pt
product_classificator/heads/wb-6_cats/: label_to_char.pkl
product_classificator/heads/wb-6_cats-pca/: isadult.pt
product_classificator/ruclip/: __init__.py  onnx_model.py  predictor.py  processor.py  ruclip_model.py
product_classificator/training/: __init__.py  test_scripts.py  train_heads.py  train_scripts.py
product_classificator/training/modules/: char_processor.py  cleaner.py  clusterization.py  dataset.py  image_loader.py  timer.py  train_procedure.py  visualisation.py
product_classificator/training/utils/: __init__.py  data_preprocessing.py  dataset.py  train_procedure.py  visualisation.py
product_classificator/utils/: __init__.py  benchmark.py  export_onnx.py
study/: 2. Possible solutions.ipynb  Training example.ipynb
tests/modules/: char_processor.py
