[tool.poetry]
name = "product-classificator"
version = "0.0.5"
description = "Classification of products using ruCLIP embeddings of product description and image"
authors = ["SergeiSakh <sergei.sakhonenkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
cython="*"
youtokentome = "^1.0.6"
huggingface_hub = "*"
stocaching = "^0.2.0"
torchvision = "^0.16.2"
nltk = "^3.2.4"
pillow = "^9.4.0"
matplotlib = "^3.7.1"
tqdm = "^4.66.0"
scikit-learn = "^1.4.0"
clearml = "^1.15.1"
umap-learn = "^0.5.6"
onnxruntime-gpu = "^1.18.0"
gpustat = {version = "^1.1.1", optional = true}
psutil = {version = "^5.9.0", optional = true}

[tool.poetry.extras]
benchmark = ["gpustat", "psutil"]
all = ["gpustat", "psutil"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
